--- a/Research/计算机/{3}_技术栈/安卓开发.md
+++ b/Research/计算机/{3}_技术栈/安卓开发.md
@@ -315,15 +315,134 @@ Android 应用程序由四个主要组件组成:
 - 显式意图 (Explicit Intent): 指定要启动的组件的类名
 - 隐式意图 (Implicit Intent): 指定要执行的操作，由系统根据意图的动作和数据类型选择合适的组件
 
+
+## 应用架构
+
+原则:
+- 组件分离
+  - 单一职责
+  - 高内聚低耦合
+- 通过数据模型驱动界面
+  - 尽量持久化存储
+- 单一数据源
+  - 分配单一的数据持有者
+  - 只有持有者可以修改或转变数据, 修改尽量通过提供接口来实现
+架构:
+- UI Layer(界面层, 唯一职责是使用和显示界面状态)
+  - 界面: 使用 View 或 Jetpack Compose 等构建视图元素来呈现数据, 同时直接处理与用户事件相关的修改界面元素的逻辑.
+  - 界面状态: 由状态容器提供, 向界面提供数据(_UiState, 类似于 Model, 尽可能是不可变的.).
+    - 状态流(LiveData 或 StateFlow): 通过数据流, 以协程为基础, 利用定义的挂起函数异步的生成和使用值, 从而从确保数据从 ViewModel 流向 UI, UI 只能观察数据的变化, 而不能直接修改数据.
+    - 要显示的数据, 控制是否要展示的状态, 控制是否要跳转的状态, 界面的回调函数, 界面的补充信息(突然要弹窗展示的信息)
+  - 状态容器(ViewModel): 负责存储和提供界面状态, 并且包含执行相应任务所必需的业务处理逻辑.
+    - ViewModel 尽量不要放入容器视图的适配器中, 会增加耦合, 而是采用回调的方式(界面状态中放回调或适配器定义回调参数)进行. 
+  - 界面会向状态容器发送用户事件通知, 状态容器会处理事件对应的逻辑并更新界面状态. 更新后的界面状态将反馈给界面以进行呈现. (循环往复)
+  - ()[!https://developer.android.com/static/topic/libraries/architecture/images/mad-arch-ui-udf-in-action.png?hl=zh-cn]
+
+```
+data class NewsItem()
+data class NewsUiState()
+interface NewsRepository{}
+
+class NewsViewModel : ViewModel() {
+    private val repository: NewsRepository = // Initialize or inject your repository here
+    private val _uiState = MutableStateFlow(NewsUiState())
+    val uiState: StateFlow<NewsUiState> = _uiState.asStateFlow()
+
+    private var fetchJob: Job? = null
+
+    fun fetchArticles(category: String) {
+        fetchJob?.cancel()
+        fetchJob = viewModelScope.launch {
+            try {
+                val newsItems = repository.newsItemsForCategory(category)
+                _uiState.update {
+                    it.copy(newsItems = newsItems)
+                }
+            } catch (ioe: IOException) {
+                // Handle the error and notify the UI when appropriate.
+                _uiState.update {
+                    val messages = getMessagesFromThrowable(ioe)
+                    it.copy(userMessages = messages)
+                 }
+            }
+            // 根据一些条件, 自行修改界面状态的部分信息.
+            if (!internetConnection()) {
+                _uiState.update { currentUiState ->
+                    currentUiState.copy(userMessage = "No Internet connection")
+                }
+                return@launch
+            }
+        }
+    }
+    
+    private fun getMessagesFromThrowable(ioe: IOException): String {
+        return ioe.localizedMessage ?: "Unknown error"
+    }
+}
+
+class NewsActivity : AppCompatActivity() {
+    private lateinit var binding: ActivityLatestNewsBinding
+    private val viewModel: NewsViewModel by viewModels()
+
+    override fun onCreate(savedInstanceState: Bundle?) {
+        ...
+
+        lifecycleScope.launch {
+            repeatOnLifecycle(Lifecycle.State.STARTED) {
+                // 界面根据新数据, 更新要显示的数据
+                viewModel.uiState
+                    .map { it.isFetchingArticles }
+                    .distinctUntilChanged()
+                    .collect { progressBar.isVisible = it }
+                // 根据状态的更改, 界面进行响应
+                viewModel.uiState.collect { uiState ->
+                    if (uiState.isUserLoggedIn) {
+                        // Navigate to the Home screen.
+                    }
+                    
+                    // 根据一些信息的更改, 界面进行一些通知
+                    uiState.userMessage?.let {
+                        // TODO: Show Snackbar with userMessage.
+
+                        // Once the message is displayed and
+                        // dismissed, notify the ViewModel.
+                        viewModel.userMessageShown()
+                    }
+                } 
+            }
+        }
+
+        binding.expandButton.setOnClickListener {
+            binding.expandedSection.visibility = View.VISIBLE
+        }
+
+        binding.refreshButton.setOnClickListener {
+            viewModel.refreshNews()
+        }
+    }
+}
+```
+
+- Domain Layer
+  - 当业务逻辑非常负责, 需要支持各部件可重用性时采用.
+  - 通过多种 UseCase 用例, 整合业务逻辑, 每个用例仅提供单一功能.
+- Data Layer
+  - 由多个存储库(Repositories)组成，其中每个存储库都可以包含零到多个数据源(Data Sources).
+  - 存储库负责处理数据变化, 解决不同数据源冲突, 对数据源抽象化处理, 编码业务逻辑, 提供公开数据访问接口.
+  - 数据源仅负责处理一个数据源, 数据源可以是文件、网络来源或本地数据库.
+- 依赖管理
+  - 依赖注入 (DI, Hilt 库): 依赖注入使类能够定义其依赖项而不构造它们。在运行时，另一个类负责提供这些依赖项。
+  - 服务定位器: 服务定位器模式提供了一个注册表，类可以从中获取其依赖项而不构造它们。
+
 ## UI
 
 应用的界面 (UI) 就是您在屏幕上所看到的内容（文本、图片、按钮和许多其他类型的元素）及其在屏幕上的布局方式。
 
+### 临时存放
+
 Jetpack Compose 可以使用在项目的 Android 自动生成的 `R` 类中通过资源 ID 访问 Android 项目中定义的资源。
 - `painterResource()` 函数会加载可绘制图片资源，并将资源 ID（在本例中为 `R.drawable.androidparty` ）作为实参。
 - `stringResource()` 
-
-
 
 `onCreate()` 函数中的 [`setContent()`](https://developer.android.com/reference/kotlin/androidx/compose/ui/platform/ComposeView?hl=zh-cn#setContent(kotlin.Function0)) 函数用于通过可组合函数定义布局。
 
@@ -399,9 +518,6 @@ Modifier
 // setTranslation/setTranslationX/setTranslationY/setTranslationZ  
 // setElevation
 
-
-
-
 RecyclerView ( `RecyclerView` 和 `RecyclerView.LayoutManager` )
 - 数据驱动：需要一个数据源来提供要显示的数据, 见 `RecyclerView.Adapter` 和 `RecyclerView.ViewHolder`
 - 可重用性：支持视图的重用机制，通过重用池来减少内存开销, 见 `onCreateViewHolder` 和 `onBindViewHolder`
@@ -409,6 +525,54 @@ RecyclerView ( `RecyclerView` 和 `RecyclerView.LayoutManager` )
 - 自定义单元格：允许自定义单元格，以便显示复杂的内容。创建自定义的 `ViewHolder` 子类, 然后在 `Adapter` 中使用这个 `ViewHolder`, 在 `onCreateViewHolder` 和 `onBindViewHolder` 方法中绑定 `ViewHolder`.
 
 ### 基础组件
+`AbsListView` 是一个抽象类，不能用作应用程序布局中的 `View` 元素，尽管您可以将其用作 `Base Class` 来实现您自己的 `View` 。在
+`AbsoluteLayout` 要被弃用了. 允许您指定其子级的确切位置（x/y 坐标）的布局。与没有绝对定位的其他类型的布局相比，绝对布局不太灵活且更难以维护。
+`AbsSeekBar` 和 `AbsSpinner ` 全是抽象类.
+`ActionMenuView`, 操作菜单视图, 支持接收菜单项单击事件的接口(看到有人当做底部菜单栏使用的).
+`Adapter` 适配器就像数据源和用户界面之间的桥梁。它从各种数据源读取数据，将其转换为 `View` 对象，并将其提供给链接的 `Adapter` 视图以创建 UI 组件。
+`AdapterView` 适配器视图可用于以列表或网格等形式有效地显示由适配器提供的大量数据。`Adapter` 获取数据并根据该数据创建一个 `View ，然后将该 `View` 提供给 `AdapterView`。然后 `AdapterView` 以想要的方式显示数据。
+`AlphabetIndexer` 实现 `SectionIndexer` 接口的适配器的辅助类。如果适配器中的项目通过简单的基于字母的排序进行排序，则此类提供了一种使用二分搜索对大型列表进行快速索引的方法。在 `ListView` 或 `RecyclerView` 中，可以使用 `AlphabetIndexer` 来为列表提供分节导航。
+`AnalogClock` 被弃用了
+`BaseAdapter`
+- `ArrayAdapter` 通过此类可以从数组获取 `AdapterView`, 
+- `CursorAdapter`
+- `SimpleAdapter`
+- `ResourceCursorAdapter`
+- `SimpleCursorAdapter`
+
+`AutoCompleteTextView` 可编辑的文本视图，在用户键入时自动显示完成建议。建议列表显示在下拉菜单中，用户可以从中选择一个项目来替换编辑框的内容。建议列表是从数据适配器获取的
+`CalendarView` 用于显示和选择日期的日历小部件。
+`CheckBox`, 创建一个复选框选项, 每个复选框都是单独管理的，必须为每个复选框注册点击监听器。
+`CheckedTextView`, 扩展 `TextView` 支持 `Checkable` 界面和显示。也就是说文本支持选中后复选支持.
+`Chronometer` 基于 `TextView` 实现的计时器. 控制和展示计时时间.
+`CompoundButton` 复合按钮, 抽象类, 具有两种状态的按钮，选中和未选中(开和关)。当按下或单击按钮时，状态会自动更改。主要派生出了 `CheckBox`, `RadioButton`, `Switch`, `ToggleButton`
+`DialerFilter` 被弃用
+`DigitalClock` 被弃用
+`EdgeEffect` 用于在可滑动控件边缘提供视觉反馈，例如 `ScrollView` 在滑动到边界时显示的弧形颜色效果。
+`EditText` 用于输入和修改文本的用户界面元素, 支持输入类型选择, 文本类型, 密码类型等.
+`ExpandableListView` 可扩展列表视图, 显示垂直滚动的两级列表中的项目的视图, 与 `ListView` 的不同之处在于允许两个级别：可以单独展开以显示其子级的组。
+`Filter` 过滤器使用过滤模式来异步约束数据, 细节待定.
+`FrameLayout` 框架布局, 可以添加多个子视图进行叠放, 新添加的视图, 会覆盖在旧视图上面.
+`Gallery` 被弃用了. 可以参考新的 `HorizontalScrollView` 和 `ViewPager`
+`GridLayout` 矩形网格布局, 可以指定网格的列数和行数. `GridLayout` 基本上将其子级放置在矩形网格中。该网格有一组许多细线，将视图区域分隔成单元格, N列的网格，那么我们将有N+1 个从0 开始的网格索引。子项占据一个或多个连续的单元格，由其 `rowSpec` 和 `columnSpec` 布局参数定义, 占据相同单元格的子项, 可能会产生重叠.
+`GridView` 网格视图, 将多个子项显示在支持滚动的二维网格的视图。数据通过 Adapter 适配器与GridView 连接, 并将每条数据插入到将在 GridView 中显示的适当项目中。
+`HeaderViewListAdapter`,  一个基类, 目前不需要学习.
+`HorizontalScrollView` 水平滚动视图, 也只支持水平滚动, 需要在其中放置一个包含要滚动的全部内容的子项, 在水平方向上，呈现用户可以滚动浏览的顶级项目的水平数组。
+`ImageButton` 图像按钮, 显示一个带有图像（而不是文本）的按钮，用户可以按下或单击该按钮。
+`ImageSwitcher` 图像切换器, 当在两个 `ImageView` 上设置新图像时，`ViewSwitcher` 在两个 `ImageView` 之间切换。添加到 `ImageSwitcher` 的视图必须都是 `ImageView`。
+`ImageView` 图像视图, 显示图片资源，例如 `Bitmap` 或者 `Drawable` 资源。 I
+`LinearLayout` 线性布局, 将其他视图水平排列在单列中或垂直排列在单行中的布局。
+`ListPopupWindow` 列表弹出窗口, `ListPopupWindow` 将自身锚定到主视图并显示一个选项列表, 能够显示 `ListAdapter` 中的项目。，进行包括定位、滚动父项以适应下拉菜单、与 IME（如果存在）进行合理交互等。
+`ListView` 显示可垂直滚动的视图集合，其中每个视图都位于列表中前一个视图的正下方。
+`Magnifier` 放大镜, `Android` 放大镜小部件。可由附加到窗口的任何视图使用。
+`MediaController` 媒体控制器.  如果拥有 “android.permission.MEDIA_CONTENT_CONTROL” 权限或者是启用的通知侦听器，或者直接从会话所有者获取 `MediaSession.Token`，则可以通过 `MediaSessionManager` 创建 `MediaController`。允许应用程序与正在进行的媒体会话交互。媒体按钮和其他命令可以发送到会话。可以注册回调以接收来自会话的更新，例如元数据和播放状态变化。
+`MultiAutoCompleteTextView`,可编辑的文本视图，扩展 `AutoCompleteTextView`，可以显示用户正在键入的文本子字符串的补全建议，而不只是整个内容。`AutoCompleteTextView` 仅提供有关整个文本的建议。但是 `MultiAutoCompleteTextView` 为文本的子字符串提供了多种建议。
+`NumberPicker` 数字选择器, 一个小部件，使用户能够从预定义范围中选择一个数字, 支持显示为可编辑输入字段，上面有一个递增按钮，下面有一个递减按钮。也支持将当前值显示为可编辑输入字段，上面的值较小，下面的值较大。点击较小或较大的值可以通过向上或向下动画数轴来选择该值，以使所选值成为当前值。向上或向下滑动允许当前值多次递增或递减。长按较小和较大值还可以快速更改当前值。点击当前值可以输入所需的值。还支持将当前值显示为滚动垂直选择器，所选值位于中心，上方和下方是前一个和后一个数字，并由分隔线分隔。通过垂直滑动来更改该值。
+`OverScroller` 过滚, 封装了滚动能力, 同时支持超出滚动操作范围的能力.
+`PopupMenu` 弹出菜单, `PopupMenu` 在锚定到视图的模式弹出窗口中显示菜单。如果有空间，弹出窗口将出现在锚视图下方；如果没有空间，则弹出窗口将出现在锚视图上方。如果 `IME` 可见，则弹出窗口不会与其重叠，直到触摸它为止。触摸弹出窗口外部会将其关闭。
+`PopupWindow` 弹出窗口.  此类表示可用于显示任意视图的弹出窗口。弹出窗口是一个浮动容器，出现在当前活动的顶部。
+`ProgressBar` 进度条. 指示操作进度的用户界面元素。进度条支持两种表示进度的模式：确定和不确定。不确定模式是进度条的默认模式，显示循环动画，但不指示具体的进度量。当想要显示已发生特定数量的进度时，请对进度栏使用确定模式。例如，正在检索的文件的剩余百分比、写入数据库的批次中的记录数量或正在播放的音频文件的剩余百分比。
+`QuickContactBadge`, 显示为一个小徽章，用户单击该徽章即可快速创建联系人，例如将电话号码或电子邮件添加到联系人列表。
 
 - AbsListView  
 - AbsListView.LayoutParams  
@@ -693,11 +857,6 @@ class MainActivity : AppCompatActivity() {
 - `Dialog` 会使得目的内容展示在之前的内容上方
 - `Activity` 会退出导航图所在的 Activity, 启动一个与导航组件分开管理的新 Android 活动
 
-
-
-
-  
-
 ### 动画和过渡
 
 > [!cite]
@@ -805,8 +964,11 @@ val response2 = client.newCall(get).enqueue(object : Callback {
 ### 内部库
 
 
-## 临时
 
+
+
+
+## 临时
 
 ### Git – 断点续传git大项目
 假设要从GitHub拉取OpenCV：https://github.com/opencv/opencv进行编译，可以按照以下的方法。
@@ -845,38 +1007,8 @@ git pull origin --all
 在Linux系统下，可以写一个shell脚本，自动循环进行git fetch.
 
 
-### 应用组件
-DialerFilter 被弃用
-DigitalClock 被弃用
-EdgeEffect 用于在可滑动控件边缘提供视觉反馈，例如ScrollView在滑动到边界时显示的弧形颜色效果。
-EditText 用于输入和修改文本的用户界面元素, 支持输入类型选择, 文本类型, 密码类型等.
-ExpandableListView 可扩展列表视图, 显示垂直滚动的两级列表中的项目的视图, 与 ListView 的不同之处在于允许两个级别：可以单独展开以显示其子级的组。
-Filter 过滤器使用过滤模式来异步约束数据, 细节待定.
-FrameLayout 框架布局, 可以添加多个子视图进行叠放, 新添加的视图, 会覆盖在旧视图上面.
-Gallery 被弃用了. 可以参考新的 HorizontalScrollView 和 ViewPager
-GridLayout 矩形网格布局, 可以指定网格的列数和行数. GridLayout 基本上将其子级放置在矩形网格中。该网格有一组许多细线，将视图区域分隔成单元格, N列的网格，那么我们将有N+1 个从0 开始的网格索引。子项占据一个或多个连续的单元格，由其 rowSpec 和 columnSpec 布局参数定义, 占据相同单元格的子项, 可能会产生重叠.
-GridView 网格视图, 将多个子项显示在支持滚动的二维网格的视图。数据通过 Adapter 适配器与GridView 连接, 并将每条数据插入到将在 GridView 中显示的适当项目中。
-HeaderViewListAdapter,  一个基类, 目前不需要学习.
-HorizontalScrollView 水平滚动视图, 也只支持水平滚动, 需要在其中放置一个包含要滚动的全部内容的子项, 在水平方向上，呈现用户可以滚动浏览的顶级项目的水平数组。
-ImageButton 图像按钮, 显示一个带有图像（而不是文本）的按钮，用户可以按下或单击该按钮。
-ImageSwitcher 图像切换器, 当在两个 ImageView 上设置新图像时，ViewSwitcher 在两个 ImageView 之间切换。添加到 ImageSwitcher 的视图必须都是 ImageView。
-ImageView 图像视图, 显示图片资源，例如 Bitmap 或者 Drawable 资源。 I
-LinearLayout 线性布局, 将其他视图水平排列在单列中或垂直排列在单行中的布局。
-ListPopupWindow 列表弹出窗口, ListPopupWindow 将自身锚定到主视图并显示一个选项列表, 能够显示 ListAdapter 中的项目。，进行包括定位、滚动父项以适应下拉菜单、与 IME（如果存在）进行合理交互等。
-ListView 显示可垂直滚动的视图集合，其中每个视图都位于列表中前一个视图的正下方。
-Magnifier 放大镜, Android 放大镜小部件。可由附加到窗口的任何视图使用。
-MediaController 媒体控制器.  如果拥有“android.permission.MEDIA_CONTENT_CONTROL”权限或者是启用的通知侦听器，或者直接从会话所有者获取 MediaSession.Token，则可以通过 MediaSessionManager 创建 MediaController。允许应用程序与正在进行的媒体会话交互。媒体按钮和其他命令可以发送到会话。可以注册回调以接收来自会话的更新，例如元数据和播放状态变化。
-MultiAutoCompleteTextView,可编辑的文本视图，扩展 AutoCompleteTextView ，可以显示用户正在键入的文本子字符串的补全建议，而不只是整个内容。AutoCompleteTextView仅提供有关整个文本的建议。但是 MultiAutoCompleteTextView 为文本的子字符串提供了多种建议。
-NumberPicker 数字选择器, 一个小部件，使用户能够从预定义范围中选择一个数字, 支持显示为可编辑输入字段，上面有一个递增按钮，下面有一个递减按钮。也支持将当前值显示为可编辑输入字段，上面的值较小，下面的值较大。点击较小或较大的值可以通过向上或向下动画数轴来选择该值，以使所选值成为当前值。向上或向下滑动允许当前值多次递增或递减。长按较小和较大值还可以快速更改当前值。点击当前值可以输入所需的值。
 
-还支持将当前值显示为滚动垂直选择器，所选值位于中心，上方和下方是前一个和后一个数字，并由分隔线分隔。通过垂直滑动来更改该值。
-OverScroller 过滚, 封装了滚动能力, 同时支持超出滚动操作范围的能力.
-PopupMenu 弹出菜单, PopupMenu 在锚定到视图的模式弹出窗口中显示菜单。如果有空间，弹出窗口将出现在锚视图下方；如果没有空间，则弹出窗口将出现在锚视图上方。如果 IME 可见，则弹出窗口不会与其重叠，直到触摸它为止。触摸弹出窗口外部会将其关闭。
-PopupWindow 弹出窗口.  此类表示可用于显示任意视图的弹出窗口。弹出窗口是一个浮动容器，出现在当前活动的顶部。
-ProgressBar 进度条. 指示操作进度的用户界面元素。进度条支持两种表示进度的模式：确定和不确定。不确定模式是进度条的默认模式，显示循环动画，但不指示具体的进度量。当想要显示已发生特定数量的进度时，请对进度栏使用确定模式。例如，正在检索的文件的剩余百分比、写入数据库的批次中的记录数量或正在播放的音频文件的剩余百分比。
-QuickContactBadge, 显示为一个小徽章，用户单击该徽章即可快速创建联系人，例如将电话号码或电子邮件添加到联系人列表。
-
-为什么减少依赖很重要？
+### 为什么减少依赖很重要？
 这段内容强调了在开发 Android 应用时，应该尽量减少对 Android 框架类（如 Context、Toast 等）的直接依赖，将这些依赖隔离在少数核心组件中。这样做的主要目的是提高代码的可测试性和模块化，降低耦合度。
 1. 提高可测试性：当类依赖于 Android 框架时（例如需要一个 Context 实例），在编写单元测试时，必须模拟这些依赖对象，这可能会增加复杂性。如果业务逻辑不依赖于 Android 框架类，那么编写单元测试就变得更加容易，因为你只需要测试纯粹的业务逻辑，而不必处理 Android 特有的依赖。
 2. 降低耦合度：如果类依赖于 Android 框架，它们就只能在 Android 环境中运行（例如设备或模拟器）。通过减少这种依赖性，代码可以更独立、更灵活，可以在不同的环境中复用，且不容易受到 Android 特定 API 的限制。
@@ -942,25 +1074,31 @@ fun testShowWelcomeMessage() {
 总结
 减少对 Android 类的直接依赖，通过使用接口或抽象类来隔离 Android 相关操作，可以让你的应用更加模块化和可测试。你可以将业务逻辑与 Android 特有的实现细节分开，使代码更灵活、更容易测试，也更符合 SOLID 原则中的单一职责和依赖倒置原则。
 
+
 ### 文件读写和权限说明
 
-Android 数据存储五种方式使用与总结.md AndroidInterview/android/Android 数据存储五种方式使用与总结.md at master · helen-x/AndroidInterview
-        // sharedPreferences: 基于XML文件存储的键值对数据
-        // 根据第一个参数name获得相应的SharedPreferences对象
-        // MODE_PRIVATE: 只能被本应用程序读、写
-        // MODE_WORLD_READABLE: 其他应用程序可以读, 但不能写
-        // MODE_WORLD_WRITEABLE: 其他应用程序可以读, 写
-        // MODE_MULTI_PROCESS: 当多个进程同时读写同一个 SharedPreferences 时, 会检查文件是否修改
-记一个 Android 14 适配引发的Android 存储权限问题
-   记一个 Android 14 适配引发的Android 存储权限问题 - SharpCJ - 博客园
-Android 文件读写最全解析
-Android 文件读写最全解析_android的data目录文件的读写-CSDN博客
+> [!todo]
+> (记一个 Android 14 适配引发的Android 存储权限问题)[https://www.cnblogs.com/joy99/p/17809113.html]
+> (Android 文件读写最全解析)[https://www.cnblogs.com/joy99/p/17809113.html]
+> (Android 数据存储五种方式使用与总结.md)[https://github.com/helen-x/AndroidInterview/blob/master/android/Android%20%E6%95%B0%E6%8D%AE%E5%AD%98%E5%82%A8%E4%BA%94%E7%A7%8D%E6%96%B9%E5%BC%8F%E4%BD%BF%E7%94%A8%E4%B8%8E%E6%80%BB%E7%BB%93.md]
+
+sharedPreferences: 基于XML文件存储的键值对数据, 根据第一个参数name获得相应的SharedPreferences对象
+- MODE_PRIVATE: 只能被本应用程序读、写
+- MODE_WORLD_READABLE: 其他应用程序可以读, 但不能写
+- MODE_WORLD_WRITEABLE: 其他应用程序可以读, 写
+- MODE_MULTI_PROCESS: 当多个进程同时读写同一个 SharedPreferences 时, 会检查文件是否修改
+
+
 
 ### Android 多线程
-任务执行和管理: Thread | Runnable | Executors | WorkManager (AsyncTask 弃用了) | ThreadPoolExecutor
-任务反馈及交互:  Callable | Future | FutureTask | Handler | HandlerThread | 
+任务执行和管理: `Thread` | `Runnable` | `Executors` | `WorkManager` (`AsyncTask` 弃用了) | `ThreadPoolExecutor`
+任务反馈及交互:  `Callable` | `Future` | `FutureTask` | `Handler` | `HandlerThread` | 
+
 #### 直接创建和管理线程及其任务
-子类化 Thread . 通过复写 run 方法自定义线程任务, 同时可以通过创建的线程对象管理线程, 如 运行、睡眠、挂起、停止.
+
+子类化 `Thread`. 通过复写 `run` 方法自定义线程任务, 同时可以通过创建的线程对象管理线程, 如 运行、睡眠、挂起、停止.
+
+```
 class MyThread(name: String) : Thread(name) {
     private var ticket = 100
     override fun run() {
@@ -984,9 +1122,13 @@ Thread("线程名称") {
         Thread.sleep(1000) // 卖票速度是1秒一张
     }
 }.start()
+```
 
 #### 任务与线程分离, 实现线程复用和资源共享
-通过实现 Runnable 任务接口, 只需要定义一个 run 方法来自定义线程任务(即只关注于任务). 通过创建 Runnable 任务对象, 并将 Runnable 对象传递给一个或多个线程对象, 使得线程对象可以执行Runnable 对象定义的线程任务, 同时共享此 Runnable 对象中的资源. 线程的管理仍是通过线程对象自身进行, 无需子类化 Thread.
+
+通过实现 `Runnable` 任务接口, 只需要定义一个 `run` 方法来自定义线程任务(即只关注于任务). 通过创建 `Runnable` 任务对象, 并将 `Runnable` 对象传递给一个或多个线程对象, 使得线程对象可以执行 `Runnable` 对象定义的线程任务, 同时共享此 `Runnable` 对象中的资源. 线程的管理仍是通过线程对象自身进行, 但是无需子类化 `Thread`.
+
+```
 class MyRunnable : Runnable {
     private var ticket = 100
     override fun run() {
@@ -1024,24 +1166,31 @@ Thread {
         Thread.sleep(1000)
     }
 }.start()
+```
+
 #### 使用线程池简化线程创建和生命周期管理
-将任务提交给线程池, 根据需要分配线程来执行任务. 
-Executor 是一个接口, 只限制了任务提交功能. 
-ExecutorService 是在Executor的基础上进一步定义的接口, 提供了:
-- shutdown() 方法停止提交任务, 并允许先前提交的任务继续执行, 直到执行完成.
-- shutdownNow() 方法停止提交任务, 并阻止等待先前提交的任务, 尝试停止当前正在执行的任务.
-- submit(...) 方法提交任务, 并返回一个可用于取消任务执行和存放任务结果的 Future 对象.
-- invokeAny 和 invokeAll 执行一组任务, 然后等到至少一个或全部任务完成.
-ScheduledExecutorService 是在 ExecutorService 基础上进一步定义的接口, 提供了:
-- schedule(...) 方法, 用于延迟执行任务.
-- scheduleAtFixedRate(...) 方法, 用于周期性执行任务.
-- scheduleWithFixedDelay(...) 方法, 用于周期性执行任务, 但是在任务完成后的固定延迟后再次执行.
-完整的实现了ExecutorService 或 ScheduledExecutorService 的类型有: 
-- ForkJoinPool
-- ScheduledExecutorService
-- ThreadPoolExecutor
-  - ScheduledThreadPoolExecutor
-Executors 是一个工具类提供了方便的工厂方法来创建不同类型的任务执行服务
+
+将任务提交给线程池, 根据需要分配线程来执行任务.
+ 
+`Executor` 是一个接口, 只限制了实现任务提交到线程池和任务执行的功能.
+`ExecutorService` 是在 `Executor` 的基础上进一步定义的接口, 提供了控制任务执行和更高级的任务提交功能.
+- `shutdown()` 方法停止提交任务, 并允许先前提交的任务继续执行, 直到执行完成.
+- `shutdownNow()` 方法停止提交任务, 并阻止等待先前提交的任务, 尝试停止当前正在执行的任务.
+- `submit(...)` 方法提交任务, 并返回一个可用于取消任务执行和存放任务结果的 `Future` 对象.
+- `invokeAny` 和 `invokeAll` 执行一组任务, 然后等到至少一个或全部任务完成.
+`ScheduledExecutorService` 是在 `ExecutorService` 基础上进一步定义的接口, 提供了延迟和周期性执行任务的功能.
+- `schedule(...)` 方法, 用于延迟执行任务.
+- `scheduleAtFixedRate(...)` 方法, 用于周期性执行任务.
+- `scheduleWithFixedDelay(...)` 方法, 用于周期性执行任务, 但是在任务完成后的固定延迟后再次执行.
+
+完整的实现了 `ExecutorService` 或 `ScheduledExecutorService` 的线程池服务类型有: 
+- `ForkJoinPool`
+- `ScheduledExecutorService`
+- `ThreadPoolExecutor`
+  - `ScheduledThreadPoolExecutor`
+
+`Executors` 是一个工具类, 提供了方便的工厂方法来创建以上列举的不同类型的线程池服务对象.
+
 ```
 // 固定大小的线程池, 适用于需要限制线程数量, 且需要复用线程执行大量短期任务的场景
 val executor = Executors.newFixedThreadPool(3) // ExecutorService
@@ -1069,8 +1218,11 @@ val threadPool = ThreadPoolExecutor(
 threadPool.execute { Thread.sleep(1000) } // 模拟任务执行时间
 threadPool.shutdown()
 ```
+
 #### 异步获取任务结果
-ExecutorService和ScheduledExecutorService两种任务执行器类型的submit 或 schedule 等方法均可以通过传递一个 Callable 任务对象来返回一个表示异步计算结果的 Future 或 ScheduledFuture 对象. 通过 Future 对象可以取消其所绑定的任务, 获取任务执行状态, 以及获取任务执行结果.
+
+`ExecutorService` 和 `ScheduledExecutorService` 两种任务执行器类型的 `submit` 或 `schedule` 等方法均可以通过传递一个 `Callable` 任务对象来返回一个表示异步计算结果的 `Future` 或 `ScheduledFuture` 对象. 通过 `Future` 对象可以取消其所绑定的任务, 获取任务执行状态, 以及获取任务执行结果.
+
 ```
 val executor = Executors.newSingleThreadExecutor()
 val callableTask = Callable {
@@ -1088,124 +1240,8 @@ val futureTask = FutureTask<String> {
 Thread(futureTask).start()
 val result = futureTask.get()
 ```
+
 #### 不同任务线程间进行消息传递
-
-
-应用架构
-原则:
-- 组件分离
-  - 单一职责
-  - 高内聚低耦合
-- 通过数据模型驱动界面
-  - 尽量持久化存储
-- 单一数据源
-  - 分配单一的数据持有者
-  - 只有持有者可以修改或转变数据, 修改尽量通过提供接口来实现
-架构:
-- UI Layer(界面层, 唯一职责是使用和显示界面状态)
-  - 界面: 使用 View 或 Jetpack Compose 等构建视图元素来呈现数据, 同时直接处理与用户事件相关的修改界面元素的逻辑.
-  - 界面状态: 由状态容器提供, 向界面提供数据(_UiState, 类似于 Model, 尽可能是不可变的.).
-    - 状态流(LiveData 或 StateFlow): 通过数据流, 以协程为基础, 利用定义的挂起函数异步的生成和使用值, 从而从确保数据从 ViewModel 流向 UI, UI 只能观察数据的变化, 而不能直接修改数据.
-    - 要显示的数据, 控制是否要展示的状态, 控制是否要跳转的状态, 界面的回调函数, 界面的补充信息(突然要弹窗展示的信息)
-  - 状态容器(ViewModel): 负责存储和提供界面状态, 并且包含执行相应任务所必需的业务处理逻辑.
-    - ViewModel 尽量不要放入容器视图的适配器中, 会增加耦合, 而是采用回调的方式(界面状态中放回调或适配器定义回调参数)进行. 
-  - 界面会向状态容器发送用户事件通知, 状态容器会处理事件对应的逻辑并更新界面状态. 更新后的界面状态将反馈给界面以进行呈现. (循环往复)
-  - ()[!https://developer.android.com/static/topic/libraries/architecture/images/mad-arch-ui-udf-in-action.png?hl=zh-cn]
-data class NewsItem()
-data class NewsUiState()
-interface NewsRepository{}
-
-class NewsViewModel : ViewModel() {
-    private val repository: NewsRepository = // Initialize or inject your repository here
-    private val _uiState = MutableStateFlow(NewsUiState())
-    val uiState: StateFlow<NewsUiState> = _uiState.asStateFlow()
-
-    private var fetchJob: Job? = null
-
-    fun fetchArticles(category: String) {
-        fetchJob?.cancel()
-        fetchJob = viewModelScope.launch {
-            try {
-                val newsItems = repository.newsItemsForCategory(category)
-                _uiState.update {
-                    it.copy(newsItems = newsItems)
-                }
-            } catch (ioe: IOException) {
-                // Handle the error and notify the UI when appropriate.
-                _uiState.update {
-                    val messages = getMessagesFromThrowable(ioe)
-                    it.copy(userMessages = messages)
-                 }
-            }
-            // 根据一些条件, 自行修改界面状态的部分信息.
-            if (!internetConnection()) {
-                _uiState.update { currentUiState ->
-                    currentUiState.copy(userMessage = "No Internet connection")
-                }
-                return@launch
-            }
-        }
-    }
-    
-    private fun getMessagesFromThrowable(ioe: IOException): String {
-        return ioe.localizedMessage ?: "Unknown error"
-    }
-}
-
-class NewsActivity : AppCompatActivity() {
-    private lateinit var binding: ActivityLatestNewsBinding
-    private val viewModel: NewsViewModel by viewModels()
-
-    override fun onCreate(savedInstanceState: Bundle?) {
-        ...
-
-        lifecycleScope.launch {
-            repeatOnLifecycle(Lifecycle.State.STARTED) {
-                // 界面根据新数据, 更新要显示的数据
-                viewModel.uiState
-                    .map { it.isFetchingArticles }
-                    .distinctUntilChanged()
-                    .collect { progressBar.isVisible = it }
-                // 根据状态的更改, 界面进行响应
-                viewModel.uiState.collect { uiState ->
-                    if (uiState.isUserLoggedIn) {
-                        // Navigate to the Home screen.
-                    }
-                    
-                    // 根据一些信息的更改, 界面进行一些通知
-                    uiState.userMessage?.let {
-                        // TODO: Show Snackbar with userMessage.
-
-                        // Once the message is displayed and
-                        // dismissed, notify the ViewModel.
-                        viewModel.userMessageShown()
-                    }
-                } 
-            }
-        }
-
-        binding.expandButton.setOnClickListener {
-            binding.expandedSection.visibility = View.VISIBLE
-        }
-
-        binding.refreshButton.setOnClickListener {
-            viewModel.refreshNews()
-        }
-    }
-}
-
-- Domain Layer
-  - 当业务逻辑非常负责, 需要支持各部件可重用性时采用.
-  - 通过多种 UseCase 用例, 整合业务逻辑, 每个用例仅提供单一功能.
-- Data Layer
-  - 由多个存储库(Repositories)组成，其中每个存储库都可以包含零到多个数据源(Data Sources).
-  - 存储库负责处理数据变化, 解决不同数据源冲突, 对数据源抽象化处理, 编码业务逻辑, 提供公开数据访问接口.
-  - 数据源仅负责处理一个数据源, 数据源可以是文件、网络来源或本地数据库.
-- 依赖管理
-  - 依赖注入 (DI, Hilt 库): 依赖注入使类能够定义其依赖项而不构造它们。在运行时，另一个类负责提供这些依赖项。
-  - 服务定位器: 服务定位器模式提供了一个注册表，类可以从中获取其依赖项而不构造它们。
-
-
 
 
 
