--- a/Research/计算机/{3}_技术栈/安卓开发.md
+++ b/Research/计算机/{3}_技术栈/安卓开发.md
@@ -323,31 +323,155 @@ Android 应用程序由四个主要组件组成:
 - 组件分离
   - 单一职责
   - 高内聚低耦合
+    - 不要将 `ViewModel` 传入 `RecyclerView` 等视图的适配器(Adapter), 而是通过适配器或视图状态的 Callback 接口实现 ViewModel 的访问.
 - 通过数据模型驱动界面
   - 尽量持久化存储
 - 单一数据源
   - 分配单一的数据持有者
   - 只有持有者可以修改或转变数据, 修改尽量通过提供接口来实现
-架构:
-- UI Layer(界面层, 唯一职责是使用和显示界面状态)
-  - 界面: 使用 View 或 Jetpack Compose 等构建视图元素来呈现数据, 同时直接处理与用户事件相关的修改界面元素的逻辑.
-  - 界面状态: 由状态容器提供, 向界面提供数据(_UiState, 类似于 Model, 尽可能是不可变的.).
-    - 状态流(LiveData 或 StateFlow): 通过数据流, 以协程为基础, 利用定义的挂起函数异步的生成和使用值, 从而从确保数据从 ViewModel 流向 UI, UI 只能观察数据的变化, 而不能直接修改数据.
-    - 要显示的数据, 控制是否要展示的状态, 控制是否要跳转的状态, 界面的回调函数, 界面的补充信息(突然要弹窗展示的信息)
-  - 状态容器(ViewModel): 负责存储和提供界面状态, 并且包含执行相应任务所必需的业务处理逻辑.
-    - ViewModel 尽量不要放入容器视图的适配器中, 会增加耦合, 而是采用回调的方式(界面状态中放回调或适配器定义回调参数)进行. 
+架构结构:
+UI Layer(界面层, 唯一职责是使用和显示界面状态)
+- 界面: 使用 View 或 Jetpack Compose 等构建视图元素来呈现数据.
+- 界面状态: 由状态容器提供, 向界面提供数据(_UiState, 类似于 Model, 尽可能是不可变的.).
+  - 状态流(LiveData 或 StateFlow(MutableStateFlow)): 通过数据流, 以协程为基础, 利用定义的挂起函数异步的生成和使用值, 从而从确保数据从 ViewModel 流向 UI, UI 只能观察数据的变化, 而不能直接修改数据.
+  - 要显示的数据, 控制是否要展示的状态, 控制是否要跳转的状态, 界面的回调函数, 界面的补充信息(突然要弹窗展示的信息)
+- 状态容器: 负责存储和提供界面状态, 并且包含执行相应任务所必需的处理逻辑.
+  - 业务逻辑状态容器(ViewModel): 处理用户事件, 将数据从数据层或网域层转换为屏幕界面状态. 在 Activity 重新创建后保留其状态和状态处理流水线。如果会重新创建状态容器，但无法保留其状态，则状态容器必须能够轻松地重新创建最近一个状态。
+  - 界面逻辑状态容器(普通类): 与界面本身具有相同的生命周期, 存储不需要长期保留的界面状态.
+- 界面事件(包括用户交互、本地资源状态改变、外部资源状态改变产生的事件等)
+  - 如果事件需要执行界面逻辑（与修改界面元素的状态相关, 如可展开项的状态），界面便可以直接处理这些事件。
+  - 如果事件需要执行业务逻辑（如刷新屏幕上的数据, 更新数据库数据），则应用由 ViewModel 处理此事件。
+- 设计原则
   - 界面会向状态容器发送用户事件通知, 状态容器会处理事件对应的逻辑并更新界面状态. 更新后的界面状态将反馈给界面以进行呈现. (循环往复)
-  - ()[!https://developer.android.com/static/topic/libraries/architecture/images/mad-arch-ui-udf-in-action.png?hl=zh-cn]
+  - 如果界面不可见或未处于活动状态，除非明确要求，否则状态生成流水线不应消耗任何资源。
+  - ViewModel 尽量不要放入容器视图的适配器中, 会增加耦合, 可以通过采用回调的方式(界面状态中放回调或适配器定义回调参数)进行.
+
+()[!https://developer.android.com/static/topic/libraries/architecture/images/mad-arch-ui-udf-in-action.png?hl=zh-cn]
+
+
+架构使用方式:
+- 以基本的数据类 `data class` 定义界面状态
+- 将 `MutableStateFlow` 用作可观测的可变状态容器
+- 通过异步调用, 如 `CoroutineScope` 更改界面状态, 在 CoroutineScope 取消后，应用便会舍弃相应工作。然后，状态容器会将挂起方法调用的结果写入用于公开界面状态的 `MutableStateFlow`。`CoroutineScope` 适合运行持续 5 秒或更长时间的请求。WorkManager 适合长期任务.
+
+
+
+
+
 
 ```
-data class NewsItem()
-data class NewsUiState()
+
+data class LoginUiState(
+    val isLoading: Boolean = false,
+    val errorMessage: String? = null,
+    val isUserLoggedIn: Boolean = false
+)
+
+class LoginViewModel : ViewModel() {
+    private val _uiState = MutableStateFlow(LoginUiState())
+    val uiState: StateFlow<LoginUiState> = _uiState.asStateFlow()
+    /* ... */
+}
+
+class LoginActivity : AppCompatActivity() {
+    private val viewModel: LoginViewModel by viewModels()
+
+    override fun onCreate(savedInstanceState: Bundle?) {
+        /* ... */
+
+        lifecycleScope.launch {
+            repeatOnLifecycle(Lifecycle.State.STARTED) {
+                viewModel.uiState.collect { uiState ->
+                    if (uiState.isUserLoggedIn) {
+                        // Navigate to the Home screen.
+                    }
+                    ...
+                }
+            }
+        }
+    }
+}
+
+private const val DOB_VALIDATION_KEY = "dobValidationKey"
+
+class DobValidationFragment : Fragment() {
+
+    private var validationInProgress: Boolean = false
+    private val viewModel: DobValidationViewModel by viewModels()
+
+    override fun onViewCreated(view: View, savedInstanceState: Bundle?) {
+        super.onViewCreated(view, savedInstanceState)
+        val binding = // ...
+        validationInProgress = savedInstanceState?.getBoolean(DOB_VALIDATION_KEY) ?: false
+
+        binding.continueButton.setOnClickListener {
+            viewModel.validateDob()
+            validationInProgress = true
+        }
+
+        viewLifecycleOwner.lifecycleScope.launch {
+            viewModel.uiState
+                .flowWithLifecycle(viewLifecycleOwner.lifecycle)
+                .collect { uiState ->
+                    // Update other parts of the UI ...
+
+                    // If the input is valid and the user wants
+                    // to navigate, navigate to the next screen
+                    // and reset `validationInProgress` flag
+                    if (uiState.isDobValid && validationInProgress) {
+                        validationInProgress = false
+                        navController.navigate(...) // Navigate to next screen
+                    }
+                }
+        }
+
+        return binding
+    }
+
+    override fun onSaveInstanceState(outState: Bundle) {
+        super.onSaveInstanceState(outState)
+        outState.putBoolean(DOB_VALIDATION_KEY, validationInProgress)
+    }
+}
+
+
+
+data class NewsItem(
+    val title: String,
+    val body: String,
+    val bookmarked: Boolean = false,
+    val publicationDate: String,
+    val onBookmark: () -> Unit
+)
+data class Message(val id: Long, val message: String)
+data class NewsUiState(
+    val isSignedIn: Boolean = false, // 状态属性
+    val isPremium: Boolean = false,
+    val isFetchingArticles: Boolean = false, // 加载状态
+    val newsItems: List<NewsItem> = listOf(), // 数据
+    val userMessages: List<Message> = listOf() // 反馈信息
+)
+val NewsUiState.canBookmarkNews: Boolean get() = isSignedIn && isPremium // 其他属性的派生属性
 interface NewsRepository{}
 
 class NewsViewModel : ViewModel() {
-    private val repository: NewsRepository = // Initialize or inject your repository here
+    private val repository: NewsRepository
+    private val formatDateUseCase: FormatDateUseCase,
     private val _uiState = MutableStateFlow(NewsUiState())
     val uiState: StateFlow<NewsUiState> = _uiState.asStateFlow()
+    val newsListUiItems = repository.latestNews.map { news ->
+        NewsItemUiState(
+            title = news.title,
+            body = news.body,
+            bookmarked = news.bookmarked,
+            publicationDate = formatDateUseCase(news.publicationDate),
+            // Business logic is passed as a lambda function that the
+            // UI calls on click events.
+            onBookmark = {
+                repository.addBookmark(news.id)
+            }
+        )
+    }
 
     private var fetchJob: Job? = null
 
@@ -366,22 +490,33 @@ class NewsViewModel : ViewModel() {
                     it.copy(userMessages = messages)
                  }
             }
-            // 根据一些条件, 自行修改界面状态的部分信息.
+        }
+    }
+
+    fun refreshNews() {
+        viewModelScope.launch {
+            // If there isn't internet connection, show a new message on the screen.
             if (!internetConnection()) {
                 _uiState.update { currentUiState ->
-                    currentUiState.copy(userMessage = "No Internet connection")
+                    currentUiState.copy(userMessages = arrayOf(["No Internet connection"]))
                 }
                 return@launch
             }
+
+            // Do something else.
         }
     }
-    
-    private fun getMessagesFromThrowable(ioe: IOException): String {
-        return ioe.localizedMessage ?: "Unknown error"
+
+    fun userMessageShown() {
+        _uiState.update { currentUiState ->
+            currentUiState.copy(userMessage = null)
+        }
     }
+
 }
 
 class NewsActivity : AppCompatActivity() {
+    private lateinit var binding2: ActivityLoginBinding
     private lateinit var binding: ActivityLatestNewsBinding
     private val viewModel: NewsViewModel by viewModels()
 
@@ -397,14 +532,10 @@ class NewsActivity : AppCompatActivity() {
                     .collect { progressBar.isVisible = it }
                 // 根据状态的更改, 界面进行响应
                 viewModel.uiState.collect { uiState ->
-                    if (uiState.isUserLoggedIn) {
-                        // Navigate to the Home screen.
-                    }
-                    
                     // 根据一些信息的更改, 界面进行一些通知
                     uiState.userMessage?.let {
                         // TODO: Show Snackbar with userMessage.
-
+    
                         // Once the message is displayed and
                         // dismissed, notify the ViewModel.
                         viewModel.userMessageShown()
@@ -419,6 +550,10 @@ class NewsActivity : AppCompatActivity() {
 
         binding.refreshButton.setOnClickListener {
             viewModel.refreshNews()
+        }
+
+        binding2.helpButton.setOnClickListener {
+            navController.navigate(...) // Open help screen
         }
     }
 }
