--- a/Research/计算机/{3}_技术栈/安卓开发.md
+++ b/Research/计算机/{3}_技术栈/安卓开发.md
@@ -316,6 +316,7 @@ Android 应用程序由四个主要组件组成:
 - 显式意图 (Explicit Intent): 指定要启动的组件的类名
 - 隐式意图 (Implicit Intent): 指定要执行的操作，由系统根据意图的动作和数据类型选择合适的组件
 
+## 项目架构
 
 ## 应用架构
 
@@ -346,20 +347,36 @@ UI Layer(界面层, 唯一职责是使用和显示界面状态)
   - 如果界面不可见或未处于活动状态，除非明确要求，否则状态生成流水线不应消耗任何资源。
   - ViewModel 尽量不要放入容器视图的适配器中, 会增加耦合, 可以通过采用回调的方式(界面状态中放回调或适配器定义回调参数)进行.
 
+- Domain Layer(网域层, 负责封装复杂的业务逻辑, 或者由多个 ViewModel 重复使用的简单业务逻辑)
+  - 合并数据层的多个存储库数据
+  - 存储可重复使用的简单业务逻辑, 相比于存放在 Utils 类中, 使得业务逻辑更加清晰, 便于维护.
+- Data Layer
+  - 由多个存储库(Repositories)组成，其中每个存储库都可以包含零到多个数据源(Data Sources).
+  - 存储库负责处理数据变化, 解决不同数据源冲突, 对数据源抽象化处理, 编码业务逻辑, 提供公开数据访问的函数接口.
+  - 每个数据源类仅负责处理一个数据源, 数据源可以是文件、网络来源或本地数据库, 且只能由存储库访问.
+  - 多个存储库可以组合成一个 Manager 存储库, 以便在一个存储库中处理多个数据源.
+  - 数据源尽可能包含本地数据源和远程数据源, 以便在没有网络连接时使用本地数据源.
+  - 调用数据源或存储库时, 需要通过协程或多线程来异步获取数据, 以避免阻塞主线程. 耗时长的操作可以通过 `WorkManager` 来执行. 比如在程序启动时在后台逐一初始化数据源, 以避免启动时的卡顿.
+  - 从网络数据源读取数据时, 可以通过指数退避算法需要处理网络连接失败、超时等异常情况.
+- 依赖管理
+  - 通过构造函数注入或 Hilt 库进行依赖注入
+  - 依赖注入使类能够定义其依赖项而不构造它们。在运行时，另一个类负责提供这些依赖项.
+  - 服务定位器: 服务定位器模式提供了一个注册表，类可以从中获取其依赖项而不构造它们.
+
+
+
 ()[!https://developer.android.com/static/topic/libraries/architecture/images/mad-arch-ui-udf-in-action.png?hl=zh-cn]
 
 
 架构使用方式:
-- 以基本的数据类 `data class` 定义界面状态
-- 将 `MutableStateFlow` 用作可观测的可变状态容器
-- 通过异步调用, 如 `CoroutineScope` 更改界面状态, 在 CoroutineScope 取消后，应用便会舍弃相应工作。然后，状态容器会将挂起方法调用的结果写入用于公开界面状态的 `MutableStateFlow`。`CoroutineScope` 适合运行持续 5 秒或更长时间的请求。WorkManager 适合长期任务.
-
-
-
-
 
 
 ```
+
+data class Author(
+    val id: String,
+    val name: String,
+)
 
 data class LoginUiState(
     val isLoading: Boolean = false,
@@ -443,6 +460,7 @@ data class NewsItem(
     val publicationDate: String,
     val onBookmark: () -> Unit
 )
+
 data class Message(val id: Long, val message: String)
 data class NewsUiState(
     val isSignedIn: Boolean = false, // 状态属性
@@ -557,18 +575,126 @@ class NewsActivity : AppCompatActivity() {
         }
     }
 }
-```
 
-- Domain Layer
-  - 当业务逻辑非常负责, 需要支持各部件可重用性时采用.
-  - 通过多种 UseCase 用例, 整合业务逻辑, 每个用例仅提供单一功能.
-- Data Layer
-  - 由多个存储库(Repositories)组成，其中每个存储库都可以包含零到多个数据源(Data Sources).
-  - 存储库负责处理数据变化, 解决不同数据源冲突, 对数据源抽象化处理, 编码业务逻辑, 提供公开数据访问接口.
-  - 数据源仅负责处理一个数据源, 数据源可以是文件、网络来源或本地数据库.
-- 依赖管理
-  - 依赖注入 (DI, Hilt 库): 依赖注入使类能够定义其依赖项而不构造它们。在运行时，另一个类负责提供这些依赖项。
-  - 服务定位器: 服务定位器模式提供了一个注册表，类可以从中获取其依赖项而不构造它们。
+data class ArticleApiModel(
+    val id: Long,
+    val title: String,
+    val content: String,
+    val publicationDate: Date,
+    val modifications: Array<ArticleApiModel>,
+    val comments: Array<CommentApiModel>,
+    val lastModificationDate: Date,
+    val authorId: Long,
+    val authorName: String,
+    val authorDateOfBirth: Date,
+    val readTimeMin: Int
+)
+
+data class Article(
+    val id: Long,
+    val title: String,
+    val content: String,
+    val publicationDate: Date,
+    val authorName: String,
+    val readTimeMin: Int
+)
+
+class NewsRemoteDataSource(
+  private val newsApi: NewsApi,
+  private val ioDispatcher: CoroutineDispatcher
+) {
+    /**
+     * Fetches the latest news from the network and returns the result.
+     * This executes on an IO-optimized thread pool, the function is main-safe.
+     */
+    suspend fun fetchLatestNews(): List<ArticleHeadline> =
+        // Move the execution to an IO-optimized thread since the ApiService
+        // doesn't support coroutines and makes synchronous requests.
+        withContext(ioDispatcher) {
+            newsApi.fetchLatestNews()
+        }
+    }
+
+// Makes news-related network synchronous requests.
+interface NewsApi {
+    fun fetchLatestNews(): List<ArticleHeadline>
+}
+
+// NewsRepository is consumed from other layers of the hierarchy.
+class NewsRepository(
+    private val newsRemoteDataSource: NewsRemoteDataSource,
+        // This could be CoroutineScope(SupervisorJob() + Dispatchers.Default).
+    private val externalScope: CoroutineScope
+) {
+    suspend fun fetchLatestNews(): List<ArticleHeadline> =
+        newsRemoteDataSource.fetchLatestNews()
+    // Mutex to make writes to cached values thread-safe.
+    private val latestNewsMutex = Mutex()
+
+    // Cache of the latest news got from the network.
+    private var latestNews: List<ArticleHeadline> = emptyList()
+
+    suspend fun getLatestNews(refresh: Boolean = false): List<ArticleHeadline> {
+        return if (refresh) {
+            externalScope.async {
+                newsRemoteDataSource.fetchLatestNews().also { networkResult ->
+                    // Thread-safe write to latestNews.
+                    latestNewsMutex.withLock {
+                        latestNews = networkResult
+                    }
+                }
+            }.await()
+        } else {
+            return latestNewsMutex.withLock { this.latestNews }
+        } 
+    }
+}
+
+class RefreshLatestNewsWorker(
+    private val newsRepository: NewsRepository,
+    context: Context,
+    params: WorkerParameters
+) : CoroutineWorker(context, params) {
+
+    override suspend fun doWork(): Result = try {
+        newsRepository.refreshLatestNews()
+        Result.success()
+    } catch (error: Throwable) {
+        Result.failure()
+    }
+}
+
+private const val REFRESH_RATE_HOURS = 4L
+private const val FETCH_LATEST_NEWS_TASK = "FetchLatestNewsTask"
+private const val TAG_FETCH_LATEST_NEWS = "FetchLatestNewsTaskTag"
+
+class NewsTasksDataSource(
+    private val workManager: WorkManager
+) {
+    fun fetchNewsPeriodically() {
+        val fetchNewsRequest = PeriodicWorkRequestBuilder<RefreshLatestNewsWorker>(
+            REFRESH_RATE_HOURS, TimeUnit.HOURS
+        ).setConstraints(
+            Constraints.Builder()
+                .setRequiredNetworkType(NetworkType.TEMPORARILY_UNMETERED)
+                .setRequiresCharging(true)
+                .build()
+        )
+            .addTag(TAG_FETCH_LATEST_NEWS)
+
+        workManager.enqueueUniquePeriodicWork(
+            FETCH_LATEST_NEWS_TASK,
+            ExistingPeriodicWorkPolicy.KEEP,
+            fetchNewsRequest.build()
+        )
+    }
+
+    fun cancelFetchingNewsPeriodically() {
+        workManager.cancelAllWorkByTag(TAG_FETCH_LATEST_NEWS)
+    }
+}
+
+```
 
 ## UI
 
